# kinship

./: Dockerfile  GEMINI.md  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml
.agent/skills/: guardian.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/instructions/: copilot-instructions.instructions.md
.github/prompts/: generate-tasks.prompt.md  prd.prompt.md
backend/: Dockerfile  README.md  alembic.ini  db.sqlite3  kinship.db  main.py  manage.py  models.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 8c5147e17b65_add_event_model.py  b193baf02c91_initial.py  f395e9fcf6fe_add_user_and_family_models.py
backend/api/: settings.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/endpoints/: auth.py
backend/app/core/: database.py  security.py
backend/app/models/: base.py  event.py  families.py  users.py
backend/app/schemas/: event.py  user.py
backend/kinship_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/routers/: calendar.py  chores.py  meals.py  users.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/frontend_tasks/: frontend_start.md
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/context/: auth.tsx
frontend/src/routes/: __root.tsx  index.tsx  login.tsx  register.tsx
planning/: Implementation_plan.md  mvp1_tasks.md
